# Prism

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts  setup_links.sh
.genome/: 00_GENOTYPE.md  10_PHENOTYPE.md  20_EPIGENOME.md  30_SELECTION.md  40_SHADOW.md
.github/workflows/: build-apks.yml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/companion-app/: build.gradle.kts
android/engine/: build.gradle.kts
android/gradle/: libs.versions.toml
android/parent-suite-app/: build.gradle.kts
android/sync/: build.gradle.kts
config/: default.yaml
docs/: Genome_Protocol_Addendum_A_Autonomous_Capture.md  Prism_01_The_Plan.md  Prism_1.5_Awakening_and_Companions.md  Prism_1.6_The_Living_Engine.md  Prism_1.7_CIAER_and_mp4Real_Integration.md  Prism_1.8_Invisible_Grounding_Signal.md  Prism_2.0_Inner_Life_State_Engine.md  Prism_2.1_Memory_Engine.md  Prism_2.2_Parent_Suite_UX.md  Prism_2.3_Awakening_Choreography.md  Prism_3.0_Platform_Architecture.md  Prism_Master_Architecture_v1.md  The_Genome_Protocol.md  inner_life_simulator.jsx  memory_simulator.jsx
docs/analysis/: 01_Soul_Mouth_Separation.md  02_Co_Evolution_Organizing_Principle.md  03_The_Genome_Protocol.md
docs/tools/: README.md  T1_Animus_State_Layer.md  T2_Cortex_Unified_Governance_Layer.md  T2_Genome_Dev_Tool.md  (+1 more)
engine/: build.gradle.kts
prism/: awakening.py  config.py  event_bus.py  main.py  orchestrator.py
tests/: conftest.py  test_grounding.py  test_inner_life.py  test_memory.py  test_mood_line.py  test_safety.py
(+127 files in other folders)
