[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "AI learning companion device for children"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "anthropic>=0.25",
    "pyttsx3>=2.90",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
pi = ["picamera2", "RPi.GPIO", "adafruit-circuitpython-neopixel"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
prism = "prism.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
